# Selective_Context

./: .gitignore  context_manager.py  main.py  pyproject.toml  qa_manager.py  readme.md  requirements.txt  selective_context.py  test.py  utils.py
app/: app.py  requirements.txt
data/: crawler.py  news_crawler.py  parse_tex.py
htcondor/: arxix.submit_file
results/: no_all.csv  parse_results.ipynb  random_phrase_all.csv  self-info-phrase.csv  self_info_phrase_all.csv  show_results.ipynb
src/selective_context/: __init__.py
