[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "selective-context"
version = "0.1.4"
description = "Compress your prompt and context to let LLMs deal with 2x more content."
authors = [{name = "Yucheng Li", email = "liyucheng09@gmail.com"}]
readme = "readme.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["nlp", "llms", "chatgpt"]
dependencies = [
    "transformers",
    "torch",
    "nltk",
    "spacy==3.2.0",
    "numpy",
    "click==8.0.4"
]
requires-python = ">=3.7"

    [project.urls]
    repository    = "https://github.com/liyucheng09/Selective_Context"